# rust-cr8s-backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  entrypoint.sh
migrations/2025-06-08-171359_create_rustaceans/: up.sql
migrations/2025-06-08-171413_create_crates/: up.sql
migrations/2025-06-28-143956_create_users/: up.sql
migrations/2025-06-28-144013_create_roles/: up.sql
migrations/2025-06-28-145036_create_user_roles/: up.sql
src/: auth.rs  commands.rs  lib.rs  macros.rs  mail.rs  main.rs  models.rs  repositories.rs  responses.rs
src/rocket_routes/: authorization.rs  crates.rs  mod.rs  rustaceans.rs
templates/email/: digest.html
tests/: authorization.rs  crates.rs  rustacean.rs
tests/common/: mod.rs
