[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "server"

[dependencies]
argon2 = "0.5"
diesel = { version = "2.1", features = ["chrono"] }
diesel-async = { version = "0.4", features = ["postgres"] }
chrono = { version = "0.4", features = ["serde"] }
clap = "4.5"
lettre = "0.11"
rand = "0.8"
rocket = { version = "0.5", features = ["json"] }
rocket_db_pools = { version = "0.2", features = ["diesel_postgres", "deadpool_redis"] }
serde = { version = "1.0", features = ["derive"] }
tera = "1"
tokio = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
